0.3
~~~

o Removed --log-dir=LOG_DIR option as it is less useful than expected
o Removed --quick-sh as it is now the default
o Replaced the control shell with colon prefixed commands
o The prompt uses readline even when not all remote shells are ready
o Ctrl-C and Ctrl-Z sent to gsh are forwaded to the remote shells
o Shell commands prefixed by an exclamation mark are run locally
o Added the :chdir control command to change the local directory
o Added the :hide_password control command, to use with su(1) for example
o Added the :reset_prompt control command, for use when launching a shell
o Common SSH key problems are detected and some help is printed


0.2
~~~

o Using readline to provide fancy command line edition and completion from
history
o Incomplete lines are printed after some delay
o Remote shells can be dynamically added/deleted/renamed
o New option --quick-sh to avoid launching a full blown session
o Added hostname expansion: for example host<1-100> and host<001-100>
o Added an option to read hostnames from a file
o Removed useless option to print only the first line of output
o Misc. bug fixes and optimizations
o Added a man page

0.1
~~~

o First release