@@ -11,6 +11,8 @@ The \fIgsh\fR prompt shows either 'ready (X)> ' or 'waiting (X/Y)> '. The 'ready
 Commands prefixed by an exclamation mark are executed locally.
 
 Signals like Ctrl\-C and Ctrl\-Z sent to \fIgsh\fR are forwarded to the remote shells.
+.SH "COMPLETION"
+The \fIgsh\fR prompt supports completion by pressing the Tab key. Completion results are taken from the command line history, absolute paths from the local filesystem and commands from the user $PATH.
 .SH "HOST NAMES EXPANSION"
 Host names with numbers can be generated by gsh using the <START\-END> syntax. The generated numbers will be zero padded according to the number of zeroes in the START and END numbers.
 .SH "OPTIONS"
